--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-resource": "^1.3.4",
+    "axios": "0.17.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
