--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vuex": "^2.3.1",
     "vue-router": "^3.0.1",
     "vue-resource": "^1.3.4",
     "axios": "0.17.0",
